--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,102 +11,74 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout do código
       uses: actions/checkout@v3
-      with:
-        ref: main  # Garantir que estamos pegando a versão mais recente da branch main
 
     - name: Configurar Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '18'  # Atualizando para a versão 18
+        node-version: '18'
 
     - name: Instalar dependências
       run: npm install
-      working-directory: ./  # Corrigido para o diretório correto do seu projeto React
 
     - name: Gerar build do React
       run: |
-        CI=false npm run build  # Adicionado para desativar a verificação de linting e ignorar erros de CI
-      working-directory: ./  # Corrigido para o diretório correto do seu projeto React
+        CI=false npm run build
 
     - name: Gerar artefato com os arquivos do build
       uses: actions/upload-artifact@v4
       with:
         name: build-frontend
-        path: ./build  # Alinhei o caminho do build para coincidir com o caminho de download
+        path: ./build
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
-
-    env:
-      PRIVATE_KEY_NAME: ${{ secrets.DEPLOY_PRIVATE_KEY_NAME }}  # Definindo a variável de ambiente com o nome da chave privada
 
     steps:
     - name: Baixar artefatos do build
       uses: actions/download-artifact@v4
       with:
         name: build-frontend
-        path: ./build  # Caminho onde os artefatos do build serão armazenados
+        path: ./build
 
-    - name: Criar o arquivo .pem a partir da variável DEPLOY_KEY e configurar permissões
-      id: create-pem-file
+    - name: Criar o arquivo .pem e configurar permissões
       run: |
-        echo "${{ secrets[env.PRIVATE_KEY_NAME] }}" > $HOME/private_key.pem  # Usando a variável de ambiente para obter o nome da chave
+        echo "${{ secrets[secrets.DEPLOY_PRIVATE_KEY_NAME] }}" > $HOME/private_key.pem
         chmod 400 $HOME/private_key.pem
-
-    - name: Verificar conteúdo do diretório build antes de copiar (passo de debug)
-      run: |
-        echo "Verificando conteúdo do diretório build antes de copiar..."
-        ls -al ./build  # Verificar os arquivos no diretório build antes de copiar
 
     - name: Enviar arquivos para a EC2 via SCP
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.EC2_PUBLIC_IP }}
         username: ubuntu
-        key: ${{ secrets[env.PRIVATE_KEY_NAME] }}  # Usando a variável de ambiente para obter o nome da chave
+        key_path: $HOME/private_key.pem
         port: 22
         source: "./build/"
-        target: "/home/ubuntu/sustentare-web/build/"  # Ajustado para o diretório do repositório sustentare-web
-        rm: true  # Forçar substituição dos arquivos na EC2
+        target: "/home/ubuntu/sustentare-web/build/"
+        rm: true
 
-    - name: Conectar via SSH na EC2 e ajustar permissões
+    - name: Configurar servidor na EC2
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.EC2_PUBLIC_IP }}
         username: ubuntu
-        key: ${{ secrets[env.PRIVATE_KEY_NAME] }}  # Usando a variável de ambiente para obter o nome da chave
+        key_path: $HOME/private_key.pem
         port: 22
         script: |
-          # Ajustar permissões no diretório de destino
-          chown -R ubuntu:ubuntu /home/ubuntu/sustentare-web/build/  # Ajustado para o diretório do repositório sustentare-web
-          chmod -R 770 /home/ubuntu/sustentare-web/build/  # Ajustado para o diretório do repositório sustentare-web
-
-          # Verificar o conteúdo do diretório build após o envio
-          echo "Conteúdo do diretório build após o envio:"
-          ls -al /home/ubuntu/sustentare-web/build/  # Ajustado para o diretório do repositório sustentare-web
-
-          # Instalar PM2, caso não esteja instalado
-          if ! command -v pm2 &> /dev/null; then
-            echo "Instalando PM2..."
-            sudo npm install -g pm2
+          # Instalar o serve globalmente, se necessário
+          if ! command -v serve &> /dev/null; then
+            sudo npm install -g serve
           fi
 
-          # Navegar até o diretório do projeto
-          cd /home/ubuntu/sustentare-web  # Ajustado para o diretório do repositório sustentare-web
+          # Navegar até o diretório do build
+          cd /home/ubuntu/sustentare-web/build
 
-          # Verificar se há dependências locais
-          if [ ! -d "node_modules" ]; then
-            echo "Instalando dependências locais..."
-            npm install
-          fi
+          # Iniciar ou reiniciar o servidor
+          pm2 delete sustentare-web || true
+          pm2 start npx --name sustentare-web -- serve -s . -l 3000
 
-          # Garantir que o build seja atualizado
-          npm run build
-
-          # Iniciar a aplicação com PM2
-          pm2 start build/ --name sustentare-web || pm2 restart sustentare-web  # Ajustado para o nome correto do repositório
+          # Salvar a configuração do PM2 para inicialização automática
+          pm2 save
