--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,84 +1,48 @@
-name: Deploy to EC2
+deploy:
+  needs: build
+  runs-on: ubuntu-latest
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  steps:
+  - name: Baixar artefatos do build
+    uses: actions/download-artifact@v4
+    with:
+      name: build-frontend
+      path: ./build
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout do código
-      uses: actions/checkout@v3
+  - name: Criar o arquivo .pem e configurar permissões
+    run: |
+      echo "${{ secrets.DEPLOY_PRIVATE_KEY }}" > $HOME/private_key.pem
+      chmod 400 $HOME/private_key.pem
 
-    - name: Configurar Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
+  - name: Verificar chave privada (debug)
+    run: |
+      echo "Verificando chave privada..."
+      ls -al $HOME/private_key.pem
 
-    - name: Instalar dependências
-      run: npm install
+  - name: Enviar arquivos para a EC2 via SCP
+    uses: appleboy/scp-action@master
+    with:
+      host: ${{ secrets.EC2_PUBLIC_IP }}
+      username: ubuntu
+      key_path: $HOME/private_key.pem
+      port: 22
+      source: "./build/"
+      target: "/home/ubuntu/sustentare-web/build/"
+      rm: true
 
-    - name: Gerar build do React
-      run: |
-        CI=false npm run build
+  - name: Configurar servidor na EC2
+    uses: appleboy/ssh-action@v1.0.3
+    with:
+      host: ${{ secrets.EC2_PUBLIC_IP }}
+      username: ubuntu
+      key_path: $HOME/private_key.pem
+      port: 22
+      script: |
+        if ! command -v serve &> /dev/null; then
+          sudo npm install -g serve
+        fi
 
-    - name: Gerar artefato com os arquivos do build
-      uses: actions/upload-artifact@v4
-      with:
-        name: build-frontend
-        path: ./build
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Baixar artefatos do build
-      uses: actions/download-artifact@v4
-      with:
-        name: build-frontend
-        path: ./build
-
-    - name: Criar o arquivo .pem e configurar permissões
-      run: |
-        echo "${{ secrets[secrets.DEPLOY_PRIVATE_KEY_NAME] }}" > $HOME/private_key.pem
-        chmod 400 $HOME/private_key.pem
-
-    - name: Enviar arquivos para a EC2 via SCP
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.EC2_PUBLIC_IP }}
-        username: ubuntu
-        key_path: $HOME/private_key.pem
-        port: 22
-        source: "./build/"
-        target: "/home/ubuntu/sustentare-web/build/"
-        rm: true
-
-    - name: Configurar servidor na EC2
-      uses: appleboy/ssh-action@v1.0.3
-      with:
-        host: ${{ secrets.EC2_PUBLIC_IP }}
-        username: ubuntu
-        key_path: $HOME/private_key.pem
-        port: 22
-        script: |
-          # Instalar o serve globalmente, se necessário
-          if ! command -v serve &> /dev/null; then
-            sudo npm install -g serve
-          fi
-
-          # Navegar até o diretório do build
-          cd /home/ubuntu/sustentare-web/build
-
-          # Iniciar ou reiniciar o servidor
-          pm2 delete sustentare-web || true
-          pm2 start npx --name sustentare-web -- serve -s . -l 3000
-
-          # Salvar a configuração do PM2 para inicialização automática
-          pm2 save
+        cd /home/ubuntu/sustentare-web/build
+        pm2 delete sustentare-web || true
+        pm2 start npx --name sustentare-web -- serve -s . -l 3000
+        pm2 save
